--- a/Info.plist
+++ b/Info.plist
@@ -73,6 +73,8 @@
 	<string>IWOR</string>
 	<key>CFBundleVersion</key>
 	<string>1.3</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.video</string>
 	<key>LSTypeIsPackage</key>
 	<string>FALSE</string>
 	<key>NSMainNibFile</key>
